# CHTL-FINAL

./: .gitignore  ACCOMPLISHMENTS.md  CHANGELOG.md  CHTL.md  CMakeLists.txt  COMPREHENSIVE_REPORT_v0.5.0.md  COMPREHENSIVE_STATUS.md  CONGRATULATIONS_v0.6.0.md  CONTRIBUTING.md  DEVELOPMENT_LOG.md  DEVELOPMENT_ROADMAP.md  EXAMPLES.md  FINAL_CHECKLIST.md  FINAL_REPORT.md  FINAL_SESSION_REPORT_2025-10-15.md  FINAL_STATUS_v0.5.0.md  FINAL_SUMMARY.md  FORMATTER_DOC.md  FORMATTER_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  NEXT_STEPS.md  PRODUCTION_IMPROVEMENTS.md  PRODUCTION_READINESS.md  PROJECT_COMPLETION_REPORT.md  PROJECT_DELIVERY.md  PROJECT_FINAL_SUMMARY.md  PROJECT_MILESTONE_v0.5.0.md  PROJECT_SETUP.md  PROJECT_STATUS.md  PROJECT_STATUS_UPDATE_2025-10-15.md  PROJECT_STATUS_v0.5.0.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICKSTART_ZH.md  README.md  README_UPDATE.md  README_ZH.md  README_v0.6.0_HIGHLIGHTS.md  RELEASE_v0.5.0.md  RELEASE_v0.6.0.md  (+68 more)
CHTL/: .gitignore  CHTL.md  CMakeLists.txt  Roadmap.md  build.py  main.cpp
CHTL/CHTL/: main.cpp
CHTL/CHTL/CHTLAnalyzer/: DocumentMap.cpp  DocumentMap.h
CHTL/CHTL/CHTLEvaluator/: Evaluator.cpp  Evaluator.h  Evaluator.hpp  Object.h
CHTL/CHTL/CHTLGenerator/: CHTLGenerator.cpp  CHTLGenerator.hpp  Document.hpp  Generator.cpp  Generator.h  HTMLGenerator.cpp  HTMLGenerator.h
CHTL/CHTL/CHTLLexer/: CHTLLexer.cpp  CHTLLexer.hpp  Lexer.cpp  Lexer.h  Token.h
CHTL/CHTL/CHTLNode/: ASTNode.h  AstNode.hpp  Attribute.h  BinaryOpNode.cpp  BinaryOpNode.hpp  ElementNode.cpp  ElementNode.hpp  Expression.h  ExpressionNode.hpp  LiteralNode.cpp  LiteralNode.hpp  Node.h  PropertyNode.cpp  PropertyNode.hpp  RuleNode.cpp  RuleNode.hpp  ScriptNode.cpp  ScriptNode.hpp  Statement.h  Style.cpp  Style.h  StyleNode.hpp  Template.cpp  Template.h  TextNode.cpp  TextNode.hpp
CHTL/CHTL/CHTLParser/: AST.h  CHTLParser.cpp  CHTLParser.hpp  Expression.h  Parser.cpp  Parser.h
CHTL/CHTL/CSS/: StyleRule.h
CHTL/CHTLContext/: CHTLContext.h
CHTL/CHTLGenerator/: AttributeInjector.cpp  AttributeInjector.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  Generator.cpp  Generator.h  StyleCollector.cpp  StyleCollector.h
CHTL/CHTLJS/CHTLJSLexer/: CHTLJSLexer.cpp  CHTLJSLexer.hpp
CHTL/CHTLJS/CHTLJSNode/: CHTLJSNode.hpp  EnhancedSelectorNode.cpp  EnhancedSelectorNode.hpp  MethodCallNode.cpp  MethodCallNode.hpp  ReactiveValueNode.cpp  ReactiveValueNode.hpp
CHTL/CHTLJS/CHTLJSParser/: CHTLJSParser.cpp  CHTLJSParser.hpp
CHTL/CHTLJS/include/: Preprocessor.h
CHTL/CHTLJS/src/: Preprocessor.cpp
CHTL/CHTLLexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
CHTL/CHTLNode/: BaseNode.h  BinaryOpExprNode.h  CommentNode.h  ConditionalExpressionNode.h  CustomDeclarationNode.h  DeleteNode.h  ElementNode.h  ExpressionNode.h  ExpressionNodes.h  IdentifierExprNode.h  InsertNode.h  Node.h  NumericLiteralExprNode.h  RootNode.h  StatementNodes.h  StyleNode.h  StylePropertyNode.h  StyleRuleNode.h  TemplateDeclarationNode.h  TemplateUsageNode.h  TextNode.h
CHTL/CHTLParser/: ExpressionParser.cpp  ExpressionParser.h  Parser.cpp  Parser.h
CHTL/SharedCore/: Document.h
CHTL/Test/: ContextSelectorTest.cpp  CustomTestFramework.hpp  FeatureTest.cpp  LexerTest.cpp  ParserTest.cpp  StylingTest.cpp  TestUtils.cpp  TestUtils.h  catch.hpp  main.cpp  test_evaluator.cpp  test_generator.cpp  test_lexer.cpp  test_parser.cpp
CHTL/Test/AstTest/: main.cpp
CHTL/Test/CHTLJS/: test_chtljs_lexer.cpp  test_chtljs_lexer_arrow.cpp  test_chtljs_lexer_bind.cpp  test_chtljs_lexer_listen.cpp  test_chtljs_lexer_reactive.cpp  test_chtljs_parser.cpp  test_chtljs_parser_method_call.cpp  test_chtljs_parser_reactive.cpp
CHTL/Test/CHTLLexer/: LexerTest.cpp
CHTL/Test/CHTLParser/: ParserAttributeArithmeticTest.cpp  ParserContextualSelectorTest.cpp  ParserFeaturesTest.cpp  ParserGlobalStyleTest.cpp  ParserStyleTest.cpp  ParserTest.cpp
CHTL/Test/GeneratorTest/: main.cpp
CHTL/cli/: main.cpp
CHTL/include/: AstNode.h  AstNodeBase.h  Compiler.h  Config.h  Evaluator.h  Generator.h  Lexer.h  Parser.h  Serialize.h  Token.h  Value.h
CHTL/preprocessor/: preprocess.cpp
CHTL/src/: AstNode.cpp  Compiler.cpp  Config.cpp  Evaluator.cpp  Generator.cpp  Lexer.cpp  Loader.cpp  Parser.cpp  Serialize.cpp  Token.cpp  Value.cpp
CHTL/tests/: ArithmeticTest.cpp  AstTest.cpp  AttributeAccessTest.cpp  BridgeTest.cpp  CHTLJSGeneratorTest.cpp  CHTLJSLexerTest.cpp  CHTLJSParserTest.cpp  CHTLJSPreprocessorTest.cpp  CJMODAPITest.cpp  CMakeLists.txt  ConfigLexerTest.cpp  ConfigParserTest.cpp  ConfigScannerTest.cpp  ConfigTest.cpp  ConfigurationIntegrationTest.cpp  ConfigurationTest.cpp  CustomizationTest.cpp  EvaluatorTest.cpp  FormatterTest.cpp  GeneratorTest.cpp  IfElseGeneratorTest.cpp  LexerTest.cpp  ModuleTest.cpp  NewFeaturesTest.cpp  ParserTest.cpp  SerializationTest.cpp  TokenTest.cpp  ValidatorTest.cpp
Test/: CMakeLists.txt  ExpressionEvaluator.test.cpp  ExpressionParser.test.cpp  Generator.test.cpp  Lexer.test.cpp  Parser.test.cpp  TestLexer.cpp  TestParser.cpp  TestStringUtil.cpp  extended_lexer_test.cpp  lexer_test.cpp  parser_test.cpp  sample_test.cpp  text_node_parser_test.cpp
chtl/: Cargo.toml  (+1 more)
src/: CMakeLists.txt  demo_parser.cpp  main.cpp
src/CHTL/: main.cpp
src/chtl/: mod.rs
tests/: CMakeLists.txt  attributes.chtl  custom_element.chtl  custom_style.chtl  element.chtl  generator.chtl  hello.chtl  imports.chtl  more_template_var.chtl  namespace.chtl  script.chtl  style.chtl  template_element.chtl  template_style.chtl  template_var.chtl  test_ampersand.cpp  test_attribute_parser.py  test_auto_class.cpp  test_auto_head.cpp  test_custom_element_parser.py  test_custom_style_parser.py  test_element_parser.py  test_expression.cpp  test_generator.cpp  test_generator.py  test_hello_world.py  test_import_parser.py  test_lexer.cpp  test_more_template_var_parser.py  test_namespace_parser.py  test_parser.cpp  test_production.cpp  test_script.cpp  test_script_parser.py  test_style.cpp  test_style_parser.py  test_template_element_parser.py  test_template_style_parser.py  test_template_var_parser.py  test_token.cpp
(+254 files in other folders)
